--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,36 @@
 <resources>
-    <!-- Home -->
+    <!-- #################### GENERAL APPLICATION STRINGS #################### -->
     <string name="app_name">My Application</string>
 
 
-    <!-- 1. Schedule Notifications 2. Work Constraints 3. App Settings -->
 
 
-    <!-- Schedule Notifications -->
-    <string name="title_schedule_notifications">Schedule Notifications</string>
+    <!-- #################### SCHEDULE NOTIFICATIONS STRINGS #################### -->
+    <string name="sn_title_schedule_notifications">Schedule Notifications</string>
 
 
-    <!-- Work Constraints -->
-    <string name="title_work_constraints">Work Constraints</string>
+    <!-- #################### WORK CONSTRAINTS STRINGS #################### -->
+    <string name="wc_title_work_constraints">Work Constraints</string>
 
-    <string name="text_input_hint_1">Constraint 1</string>
-    <string name="text_input_hint_2">Constraint 2</string>
-    <string name="text_input_hint_3">Constraint 3</string>
-    <string name="text_input_hint_4">Constraint 4</string>
+    <!-- WC Date Chips -->
+    <string name="wc_chip_1">M</string>
+    <string name="wc_chip_2">T</string>
+    <string name="wc_chip_3">W</string>
+    <string name="wc_chip_4">T</string>
+    <string name="wc_chip_5">F</string>
+    <string name="wc_chip_6">S</string>
+    <string name="wc_chip_7">S</string>
 
-    <!-- App Settings -->
-    <string name="title_settings">App Settings</string>
+    <!-- WC Input Hints -->
+    <string name="text_input_hint_1">Maximum Travel Radius</string>
+    <string name="text_input_hint_2">Vehicle Storage Dimensions</string>
+
+    <!-- WC Button Text -->
+    <string name="wc_btn_update">Update Records</string>
+
+
+    <!-- #################### APP SETTINGS STRINGS #################### -->
+    <string name="as_title_app_settings">App Settings</string>
 
 
 </resources>
